# ascend-and-fall

./: .gitignore  CMakeLists.txt  README.md  cmake.sh
assets/models/groundTile/: groundTile.mtl
assets/models/player/: player.blend  player.blend1  player.mtl  player_texture.mtl
assets/models/playerOld/: player_texture.mtl
assets/shaders/: hudshader.fs  hudshader.vs  instancedshader.vs  modelshader.fs  modelshader.vs  shape_phong.fs  shape_phong.vs
glfw-windows-install/lib/pkgconfig/: glfw3.pc
include/: README.md
include/glad/: glad.h
scripts/: build_windows.sh
src/: Animation.h  Animator.h  Animdata.h  AssimpGLMHelpers.h  Bone.h  Callbacks.cpp  Callbacks.h  Camera.cpp  Camera.h  Collision.h  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Hud.cpp  Hud.h  Input.cpp  Input.h  Level.cpp  Level.h  Logger.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Perlin2D.cpp  Perlin2D.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Tile.cpp  Tile.h  Utils.cpp  Utils.h  Window.cpp  (+3 more)
